Endlich funktioniert einiges. Außerdem passwortgeschütze Optionen hinzugefügt.

--- a/html/beta.html
+++ b/html/beta.html
@@ -18,12 +18,150 @@
 		<main class="content">
 
 			<ul id="statlist">
-				<li>0</li>
-				<li>0</li>
-				<li>0</li>
-				<li>0</li>
-				<li>0</li>
-				<li>0</li>
+				<li>
+					<span class="statlist-value">0</span>
+					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
+						<select>
+							<option value="null">random</option>
+							<option value="3">3</option>
+							<option value="3">4</option>
+							<option value="3">5</option>
+							<option value="3">6</option>
+							<option value="3">7</option>
+							<option value="3">8</option>
+							<option value="3">9</option>
+							<option value="3">10</option>
+							<option value="3">11</option>
+							<option value="3">12</option>
+							<option value="3">13</option>
+							<option value="3">14</option>
+							<option value="3">15</option>
+							<option value="3">16</option>
+							<option value="3">17</option>
+							<option value="3">18</option>
+						</select>
+					</span>
+				</li>
+				<li>
+					<span class="statlist-value">0</span>
+					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
+						<select>
+							<option value="null">random</option>
+							<option value="3">3</option>
+							<option value="3">4</option>
+							<option value="3">5</option>
+							<option value="3">6</option>
+							<option value="3">7</option>
+							<option value="3">8</option>
+							<option value="3">9</option>
+							<option value="3">10</option>
+							<option value="3">11</option>
+							<option value="3">12</option>
+							<option value="3">13</option>
+							<option value="3">14</option>
+							<option value="3">15</option>
+							<option value="3">16</option>
+							<option value="3">17</option>
+							<option value="3">18</option>
+						</select>
+					</span>
+				</li>
+				<li>
+					<span class="statlist-value">0</span>
+					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
+						<select>
+							<option value="null">random</option>
+							<option value="3">3</option>
+							<option value="3">4</option>
+							<option value="3">5</option>
+							<option value="3">6</option>
+							<option value="3">7</option>
+							<option value="3">8</option>
+							<option value="3">9</option>
+							<option value="3">10</option>
+							<option value="3">11</option>
+							<option value="3">12</option>
+							<option value="3">13</option>
+							<option value="3">14</option>
+							<option value="3">15</option>
+							<option value="3">16</option>
+							<option value="3">17</option>
+							<option value="3">18</option>
+						</select>
+					</span>
+				</li>
+				<li>
+					<span class="statlist-value">0</span>
+					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
+						<select>
+							<option value="null">random</option>
+							<option value="3">3</option>
+							<option value="3">4</option>
+							<option value="3">5</option>
+							<option value="3">6</option>
+							<option value="3">7</option>
+							<option value="3">8</option>
+							<option value="3">9</option>
+							<option value="3">10</option>
+							<option value="3">11</option>
+							<option value="3">12</option>
+							<option value="3">13</option>
+							<option value="3">14</option>
+							<option value="3">15</option>
+							<option value="3">16</option>
+							<option value="3">17</option>
+							<option value="3">18</option>
+						</select>
+					</span>
+				</li>
+				<li>
+					<span class="statlist-value">0</span>
+					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
+						<select>
+							<option value="null">random</option>
+							<option value="3">3</option>
+							<option value="3">4</option>
+							<option value="3">5</option>
+							<option value="3">6</option>
+							<option value="3">7</option>
+							<option value="3">8</option>
+							<option value="3">9</option>
+							<option value="3">10</option>
+							<option value="3">11</option>
+							<option value="3">12</option>
+							<option value="3">13</option>
+							<option value="3">14</option>
+							<option value="3">15</option>
+							<option value="3">16</option>
+							<option value="3">17</option>
+							<option value="3">18</option>
+						</select>
+					</span>
+				</li>
+				<li>
+					<span class="statlist-value">0</span>
+					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
+						<select>
+							<option value="null">random</option>
+							<option value="3">3</option>
+							<option value="3">4</option>
+							<option value="3">5</option>
+							<option value="3">6</option>
+							<option value="3">7</option>
+							<option value="3">8</option>
+							<option value="3">9</option>
+							<option value="3">10</option>
+							<option value="3">11</option>
+							<option value="3">12</option>
+							<option value="3">13</option>
+							<option value="3">14</option>
+							<option value="3">15</option>
+							<option value="3">16</option>
+							<option value="3">17</option>
+							<option value="3">18</option>
+						</select>
+					</span>
+				</li>
 			</ul>
 
 			<div class="value-display">
@@ -44,8 +182,10 @@
 					<label for="dm-mode">DM Mode</label>
 				</div>
 				<input type="number" id="multi-char-roll" placeholder="Wie viele Charaktere? Wenn nichts ausgewählt 1.">
-				<input type="number" id="dice-manipulator-min" placeholder="Mindest Total-Wert (36-108)" min="36" max="108">
-				<input type="number" id="dice-manipulator-max" placeholder="Maximaler Total-Wert (36-108)" min="36" max="108">
+				<div id="dm-options" class="option-wrapper display-none">
+					<input type="number" id="dice-manipulator-min" placeholder="Mindest Total-Wert (36-108)" min="36" max="108">
+					<input type="number" id="dice-manipulator-max" placeholder="Maximaler Total-Wert (36-108)" min="36" max="108">
+				</div>
 			</div>
 			
 			<div class="history-wrapper">
