Aufteilen von Options zu 'PageOptions' und 'characterOptions', welche dann in dem Object Character gefunden werden können.

--- a/html/beta.html
+++ b/html/beta.html
@@ -19,6 +19,7 @@
 
 			<ul id="statlist">
 				<li>
+					<span class="statlist-roll"></span>
 					<span class="statlist-value">0</span>
 					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
 						<select>
@@ -43,6 +44,7 @@
 					</span>
 				</li>
 				<li>
+					<span class="statlist-roll"></span>
 					<span class="statlist-value">0</span>
 					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
 						<select>
@@ -67,6 +69,7 @@
 					</span>
 				</li>
 				<li>
+					<span class="statlist-roll"></span>
 					<span class="statlist-value">0</span>
 					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
 						<select>
@@ -91,6 +94,7 @@
 					</span>
 				</li>
 				<li>
+					<span class="statlist-roll"></span>
 					<span class="statlist-value">0</span>
 					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
 						<select>
@@ -115,6 +119,7 @@
 					</span>
 				</li>
 				<li>
+					<span class="statlist-roll"></span>
 					<span class="statlist-value">0</span>
 					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
 						<select>
@@ -139,6 +144,7 @@
 					</span>
 				</li>
 				<li>
+					<span class="statlist-roll"></span>
 					<span class="statlist-value">0</span>
 					<span class="dm-statlist-fudge display-none" id="dm-statlist-fudge-1">
 						<select>
